# iot_services

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
control_service/: Cargo.toml  Dockerfile
control_service/src/: main.rs
device_service/: Cargo.toml  Dockerfile
device_service/src/: main.rs
kafka/: Dockerfile  kafka-entrypoint.sh
nginx/: Dockerfile
nginx/config/: nginx.conf
notification-service/: main.py
sensor_simulator/: main.py
sensor_storage/: Cargo.toml  Dockerfile
sensor_storage/src/: main.rs
user_interface/: Dockerfile  package.json
user_interface/public/: index.html
user_interface/src/: App.css  App.js
